--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "hddserial",
-  "version": "0.0.1",
-  "description": "Get the HDD,SDD Serial Number.",
+  "version": "0.0.3",
+  "description": "Get the HDD,SDD Serial Number for Node js.",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scravy/node-hddserial.git"
+    "url": "https://github.com/ihabhamad/node-hddserial.git"
   },
   "keywords": [
-    "hdd",
-    "sdd",
-    "hdd info",
-    "sdd info",
-    "hard disk info",
-    "hdd serialnumber",
-    "sdd serialnumber",
-    "hard disk serialnumber",
-    "hdd serial",
-    "sdd serial",
-    "hard disk serial"
+    "node hdd",
+    "node sdd",
+    "node hdd info",
+    "node sdd info",
+    "node hard disk info",
+    "node hdd serialnumber",
+    "node sdd serialnumber",
+    "node hard disk serialnumber",
+    "node hdd serial",
+    "node sdd serial",
+    "node hard disk serial"
   ],
   "author": "Ihab Hamad",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/scravy/node-hddserial/issues"
+    "url": "https://github.com/ihabhamad/node-hddserial/issues"
   },
-  "homepage": "https://github.com/scravy/node-hddserial"
+  "homepage": "https://github.com/ihabhamad/node-hddserial"
 }
